Updated app.py and improved UI

--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
           <h2 class="h2 hero-title">Welcome Humans</h2>
           <h6 class="h6 hero-title">Hello! I am Docky 🤖</h6> 
           <h6 class="h6 hero-title">I am AI Chatbot and can talk on the behalf of your document</h6>
-        <h6 class="h6 hero-title">So Let's Go! </h6>
+        <h6 class="h6 hero-title">Let's Go! </h6>
         </div>
       </section>
     </article>
