--- a/static/style.css
+++ b/static/style.css
@@ -1404,6 +1404,38 @@
   height: 100vh !important;
   width: 100vh !important;
 }
+
+.footer .row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap:118%;
+}
+
+
+/* .footer .col-md-4 {
+  flex: 1;
+  text-align: center;
+} */
+
+.social-icons {
+  /* display: flex; */
+  justify-content: center;
+  align-items: center;
+  /* flex-wrap: wrap; Allow the icons to wrap onto multiple lines if necessary */
+  display: inline-flex;
+}
+
+.social-icons li {
+  margin: 10px; /* Add space around each icon */
+}
+
+.social-icons img {
+  width: 44px;
+  height: auto;
+}
+
+
 /* .footer_bg {
     position: absolute;
     bottom: 0;
