--- a/templates/result.html
+++ b/templates/result.html
@@ -91,7 +91,7 @@
     <!-- <p></p>
     <p></p> -->
     
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -105,6 +105,14 @@
                     <a href="https://pythonpythonme.netlify.app/index.html"><img src="{{ url_for('static', filename='insta.png') }}" alt="Instagram"></a>
                 </ul>
             </div>
+            <div class="col-md-4 text-center">
+                <h3>My Models</h3>
+                <ul class="social-icons">
+                    <li><a href="URL_OF_MODEL_1"><img src="{{ url_for('static', filename='icon1.png') }}" alt="Icon 1"></a></li>
+                    <li><a href="URL_OF_MODEL_2"><img src="{{ url_for('static', filename='icon2.png') }}" alt="Icon 2"></a></li>
+                 Add more links as needed -->
+                <!-- </ul>
+            </div>
         </div>
             <div class="row">
                 <div class="col-md-12">
@@ -113,7 +121,42 @@
                 </div>
             </div>
         </div>
+    </footer> -->
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>Shreya Mishra 🤖</h3>
+                </div>
+                <div class="col-md-4 text-center">
+                    <h3>Follow Me</h3>
+                    <ul class="social-icons">
+                        <!-- Social media icons -->
+                        <a href="https://www.linkedin.com/in/anoop-johny-30a746181/"><img src="{{ url_for('static', filename='linkedin.png') }}" alt="LinkedIn"></a>
+                        <a href="https://github.com/flyfir248"><img src="{{ url_for('static', filename='github.png') }}" alt="GitHub"></a>
+                        <a href="https://pythonpythonme.netlify.app/index.html"><img src="{{ url_for('static', filename='insta.png') }}" alt="Instagram"></a>
+                    </ul>
+                </div>
+                <div class="col-md-4 text-center">
+                    <h3>My MODELS</h3>
+                    <ul class="social-icons">
+                        <li><a href="https://huggingface.co/Feluda/Zephyr-7b-QnA"> <img src="{{ url_for('static', filename='hugging.svg') }}" alt="Icon 1"></a></li>
+                        <li><a href="URL_OF_MODEL_2"><img src="{{ url_for('static', filename='hugging.svg') }}" alt="Icon 2"></a></li>
+                        <!-- Add more links as needed -->
+                    </ul>
+                </div>
+            <!-- </div>
+            <div class="row"> -->
+                
+            </div>
+        </div>
+        <div class="col-md-12">
+            <p class="text-muted">© 2023-2024 FeludaCoder.</p>
+            <p>All rights reserved.</p>
+        </div>
     </footer>
+    
       <!--
     - custom js link
   -->
