--- a/templates/index.html
+++ b/templates/index.html
@@ -115,16 +115,16 @@
                 <h3>Follow Me</h3>
                 <ul class="social-icons">
                     <!-- Social media icons -->
-                    <a href="https://www.linkedin.com/in/anoop-johny-30a746181/"><img src="{{ url_for('static', filename='linkedin.png') }}" alt="LinkedIn"></a>
-                    <a href="https://github.com/flyfir248"><img src="{{ url_for('static', filename='github.png') }}" alt="GitHub"></a>
-                    <a href="https://pythonpythonme.netlify.app/index.html"><img src="{{ url_for('static', filename='insta.png') }}" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/in/shreya-mishra03/"><img src="{{ url_for('static', filename='linkedin.png') }}" alt="LinkedIn"></a>
+                    <a href="https://github.com/shrey2003"><img src="{{ url_for('static', filename='github.png') }}" alt="GitHub"></a>
+                    <a href="https://www.instagram.com/shrey_a_mishra_03/"><img src="{{ url_for('static', filename='insta.png') }}" alt="Instagram"></a>
                 </ul>
             </div>
             <div class="col-md-4 text-center">
                 <h3>My MODELS</h3>
                 <ul class="social-icons">
                     <li><a href="https://huggingface.co/Feluda/Zephyr-7b-QnA"> <img src="{{ url_for('static', filename='hugging.svg') }}" alt="Icon 1"></a></li>
-                    <li><a href="URL_OF_MODEL_2"><img src="{{ url_for('static', filename='hugging.svg') }}" alt="Icon 2"></a></li>
+                    <li><a href="https://huggingface.co/Feluda/zephyr-finetuned-legal"><img src="{{ url_for('static', filename='hugging.svg') }}" alt="Icon 2"></a></li>
                     <!-- Add more links as needed -->
                 </ul>
             </div>
