--- a/templates/question.html
+++ b/templates/question.html
@@ -25,13 +25,6 @@
     
     
           </div>
-    
-          <!-- <button class="nav-toggle-btn" aria-label="Toggle Menu" title="Toggle Menu" data-nav-toggle-btn>
-            <span class="one"></span>
-            <span class="two"></span>
-            <span class="three"></span>
-          </button>
-     -->
           <nav class="navbar" data-navbar>
             <ul class="navbar-list">
     
@@ -78,31 +71,39 @@
     <p></p>
     <p></p>
     <footer class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h3>Shreya Mishra 🤖</h3>
-                </div>
-            <div class="col-md-4 text-center">
-                <h3>Follow Me</h3>
-                <ul class="social-icons">
-                  <a href="https://www.linkedin.com/in/anoop-johny-30a746181/"><img src="{{ url_for('static', filename='linkedin.png') }}" alt="LinkedIn"></a>
-                  <a href="https://github.com/flyfir248"><img src="{{ url_for('static', filename='github.png') }}" alt="GitHub"></a>
-                  <a href="https://pythonpythonme.netlify.app/index.html"><img src="{{ url_for('static', filename='insta.png') }}" alt="Instagram"></a>
-                   
-                </ul>
-            </div>
-        </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <p class="text-muted">© 2023-2024 FeludaCoder.</p>
-                    <p>All rights reserved.</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-<script src="/static/script.js"></script>
+      <div class="container">
+          <div class="row">
+              <div class="col-md-4">
+                  <h3>Shreya Mishra 🤖</h3>
+              </div>
+              <div class="col-md-4 text-center">
+                  <h3>Follow Me</h3>
+                  <ul class="social-icons">
+                      <!-- Social media icons -->
+                      <a href="https://www.linkedin.com/in/shreya-mishra03/"><img src="{{ url_for('static', filename='linkedin.png') }}" alt="LinkedIn"></a>
+                      <a href="https://github.com/shrey2003"><img src="{{ url_for('static', filename='github.png') }}" alt="GitHub"></a>
+                      <a href="https://www.instagram.com/shrey_a_mishra_03/"><img src="{{ url_for('static', filename='insta.png') }}" alt="Instagram"></a>
+                  </ul>
+              </div>
+              <div class="col-md-4 text-center">
+                  <h3>My MODELS</h3>
+                  <ul class="social-icons">
+                      <li><a href="https://huggingface.co/Feluda/Zephyr-7b-QnA"> <img src="{{ url_for('static', filename='hugging.svg') }}" alt="Icon 1"></a></li>
+                      <li><a href="https://huggingface.co/Feluda/zephyr-finetuned-legal"><img src="{{ url_for('static', filename='hugging.svg') }}" alt="Icon 2"></a></li>
+                      <!-- Add more links as needed -->
+                  </ul>
+              </div>
+          <!-- </div>
+          <div class="row"> -->
+              
+          </div>
+      </div>
+      <div class="col-md-12">
+          <p class="text-muted">© 2023-2024 FeludaCoder.</p>
+          <p>All rights reserved.</p>
+      </div>
+  </footer>
+  
 <!--
   - ionicon link
 -->
