--- a/templates/index.html
+++ b/templates/index.html
@@ -121,7 +121,7 @@
                 </ul>
             </div>
             <div class="col-md-4 text-center">
-                <h3>My MODELS</h3>
+                <h3>MY MODELS</h3>
                 <ul class="social-icons">
                     <li><a href="https://huggingface.co/Feluda/Zephyr-7b-QnA"> <img src="{{ url_for('static', filename='hugging.svg') }}" alt="Icon 1"></a></li>
                     <li><a href="https://huggingface.co/Feluda/zephyr-finetuned-legal"><img src="{{ url_for('static', filename='hugging.svg') }}" alt="Icon 2"></a></li>
